--- a/src/components/SudokuSolver/style.module.css
+++ b/src/components/SudokuSolver/style.module.css
@@ -7,6 +7,14 @@
     min-height: 100vh;
     color: #dbe1e8;
 }
+
+.loader{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
   
 .title h3 {
     position: relative;
